feat: implement authentication and authorization with JWT
- Added AuthModule with login functionality and JWT strategy.
- Created AuthController for handling login requests.
- Integrated Passport for JWT authentication.
- Secured routes in various modules (Bookings, Cart, Payments, Clients, Reservations) with JwtAuthGuard.
- Updated environment configuration for JWT secret key.

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,81 @@
-# Database Configuration
-# PostgreSQL connection string for the application database
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/backend_arqui?schema=public"
+# ========================================
+# Environment Configuration
+# ========================================
 
-# Application Configuration
-# Port where the NestJS application will run
+# Node Environment (development, test, production)
+NODE_ENV=development
+
+# Application Port
 PORT=3000
 
-# pgAdmin Configuration
-# Default credentials for pgAdmin web interface
-PGADMIN_DEFAULT_EMAIL=admin@admin.com
-PGADMIN_DEFAULT_PASSWORD=admin
+# ========================================
+# Database Configuration
+# ========================================
 
-# Production Environment Variables (uncomment and configure for production)
-# DATABASE_URL="postgresql://username:password@host:port/database?schema=public"
-# JWT_SECRET=your-super-secret-jwt-key-here
-# NODE_ENV=production
+# PostgreSQL connection string
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/backend_arqui?schema=public"
+
+# ========================================
+# Authentication & Security
+# ========================================
+
+# JWT Secret Key for token signing (CHANGE IN PRODUCTION)
+JWT_SECRET=your-secret-key-here-change-in-production
+
+# ========================================
+# External Services - Bank/Payment Gateway
+# ========================================
+
+# Bank API Base URL
+BANK_BASE_URL=https://api.bank-provider.com
+
+# Bank API Key
+BANK_API_KEY=your-bank-api-key
+
+# Bank Webhook Secret for signature verification
+BANK_WEBHOOK_SECRET=your-bank-webhook-secret
+
+# Bank API Timeout (milliseconds)
+BANK_TIMEOUT_MS=8000
+
+# Public Base URL for callbacks (used by bank to call our webhook)
+PUBLIC_BASE_URL=http://localhost:3000
+
+# ========================================
+# External Services - Hotels
+# ========================================
+
+# Hotel Provider API Base URL
+HOTEL_BASE_URL=https://api.hotel-provider.com
+
+# Hotel Provider API Key
+HOTEL_API_KEY=your-hotel-api-key
+
+# Hotel API Timeout (milliseconds)
+HOTEL_TIMEOUT_MS=8000
+
+# ========================================
+# External Services - Airlines
+# ========================================
+
+# Airline Provider API Base URL
+AIRLINE_BASE_URL=https://api.airline-provider.com
+# Alternative: AIR_BASE_URL (alias)
+
+# Airline Provider API Key
+AIRLINE_API_KEY=your-airline-api-key
+# Alternative: AIR_API_KEY (alias)
+
+# Airline API Timeout (milliseconds)
+AIRLINE_TIMEOUT_MS=8000
+# Alternative: AIR_TIMEOUT_MS (alias)
+
+# ========================================
+# pgAdmin Configuration (Docker)
+# ========================================
+
+# pgAdmin Default Email
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+
+# pgAdmin Default Password
+PGADMIN_DEFAULT_PASSWORD=admin
